--- a/pi_matrix_code/Makefile
+++ b/pi_matrix_code/Makefile
@@ -17,16 +17,6 @@ all : $(BINARIES)
 $(RGB_LIBRARY): FORCE
 	$(MAKE) -C $(RGB_LIBDIR)
 
-demo : demo-main.o $(RGB_LIBRARY)
-	$(CXX) $< -o $@ $(LDFLAGS)
-
-minimal-example : minimal-example.o
-input-example : input-example.o
-text-example: text-example.o
-scrolling-text-example : scrolling-text-example.o
-clock : clock.o
-ledcat : ledcat.o
-
 # All the binaries that have the same name as the object file.q
 % : %.o $(RGB_LIBRARY)
 	$(CXX) $< -o $@ $(LDFLAGS)
@@ -34,7 +24,7 @@ ledcat : ledcat.o
 
 # Since the C example uses the C++ library underneath, which depends on C++
 # runtime stuff, you still have to also link -lstdc++
-c-example : c-example.o $(RGB_LIBRARY)
+c-example : c-example.o pb_common.o pb_decode.o pb_encode.o messagedata.pb.o $(RGB_LIBRARY)
 	$(CXX) $< -o $@ $(LDFLAGS) -lstdc++
 
 %.o : %.cc
