cleaned up makefile, integrated protobuffer message decoding/encoding

--- a/pi_matrix_code/Makefile
+++ b/pi_matrix_code/Makefile
@@ -1,10 +1,7 @@
-CFLAGS=-Wall -O3 -g -Wextra -Wno-unused-parameter
-CXXFLAGS=$(CFLAGS)
-OBJECTS= c-example.o 
-BINARIES= c-example
+CC=g++
+CFLAGS= -I. -g
+DEPS = messagedata.pb.h pb.h pb_common.h pb_decode.h pb_encode.h
 
-# Where our library resides. You mostly only need to change the
-# RGB_LIB_DISTRIBUTION, this is where the library is checked out.
 RGB_LIB_DISTRIBUTION=rpi-rgb-led-matrix
 RGB_INCDIR=$(RGB_LIB_DISTRIBUTION)/include
 RGB_LIBDIR=$(RGB_LIB_DISTRIBUTION)/lib
@@ -12,29 +9,22 @@ RGB_LIBRARY_NAME=rgbmatrix
 RGB_LIBRARY=$(RGB_LIBDIR)/lib$(RGB_LIBRARY_NAME).a
 LDFLAGS+=-L$(RGB_LIBDIR) -l$(RGB_LIBRARY_NAME) -lrt -lm -lpthread
 
-all : $(BINARIES)
+%.o: %.c $(DEPS)
+	$(CC) -I$(RGB_INCDIR) $(CFLAGS) -c -o $@ $<
+
+%.o: %.cpp $(DEPS)
+	$(CC) -I$(RGB_INCDIR) $(CFLAGS) -c -o $@ $<
+
+
+PiMatrix: PiMatrix messagedata.pb.o pb_common.o pb_encode.o pb_decode.o main.o  $(RGB_LIBRARY)
+	$(CC) $(CFLAGS) -o PiMatrix messagedata.pb.o pb_common.o pb_encode.o pb_decode.o main.o  $(LDFLAGS)
+
 
 $(RGB_LIBRARY): FORCE
 	$(MAKE) -C $(RGB_LIBDIR)
 
-# All the binaries that have the same name as the object file.q
-% : %.o $(RGB_LIBRARY)
-	$(CXX) $< -o $@ $(LDFLAGS)
-
-
-# Since the C example uses the C++ library underneath, which depends on C++
-# runtime stuff, you still have to also link -lstdc++
-c-example : c-example.o pb_common.o pb_decode.o pb_encode.o messagedata.pb.o $(RGB_LIBRARY)
-	$(CXX) $< -o $@ $(LDFLAGS) -lstdc++
-
-%.o : %.cc
-	$(CXX) -I$(RGB_INCDIR) $(CXXFLAGS) -c -o $@ $<
-
-%.o : %.c
-	$(CC) -I$(RGB_INCDIR) $(CFLAGS) -c -o $@ $<
-
 clean:
-	rm -f $(OBJECTS) $(BINARIES)
+	rm -f messagedata.pb.o pb_common.o pb_encode.o pb_decode.o main.o 
 
 FORCE:
 .PHONY: FORCE
